# colab

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRACT.md  LICENSE  Makefile  PLAN.md  README.md  SETUP.md  TODO.md  pyproject.toml
.agents/: AGENTS.md
scripts/: audit_infra.py
src/colab/: .env.example  __init__.py  cli.py  config.py  config.yaml  exceptions.py  model.py  orchestrator.py  queue.py  runtime.py
src/colab/acp/: __init__.py  client.py  meta.py  protocol.py  session.py
src/colab/audio/: __init__.py  barge_in.py  mic.py  playback.py  stt.py  tts.py  vad.py
src/colab/router/: __init__.py  mistral.py  prompts.py
src/colab/tmux/: __init__.py  pane.py
tests/: test_acp_client.py  test_acp_protocol.py  test_acp_session.py  test_config.py  test_model.py  test_orchestrator_e2e.py  test_orchestrator_queue.py  test_queue.py  test_router_mistral.py  test_router_stub.py  test_runtime.py  test_tts.py  test_vad.py
tests/fixtures/acp/: initialize_flow.jsonl  prompt_stream.jsonl
